--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -43,20 +43,20 @@
           <h3>Moneyback Guarantee</h3>
         </header>
         <div class="image fit">
-          <img src="images/pic01.jpg" alt="" />
+          <img src="images/fabian-blank.jpg" alt="" />
         </div>
-        <p>Yes, we are that confident. Set your stopwatches.<br> 
-          Every product we fail to deliver on time, you get your money back.<br>
+        <p>Yes, we are that confident.<br> 
+          Set your stopwatches. Every product we fail to deliver on time, you get your money back.<br>
           We guarantee it.</p>
       </div>
     </article>
     <article class="alt">
       <div class="content">
         <header>
-          <h3>We Are Ubiquitus</h3>
+          <h3>We Are Ubiquitous</h3>
         </header>
         <div class="image fit">
-          <img src="images/pic04.jpg" alt="" />
+          <img src="/images/sergio-souza.jpg" alt="" />
         </div>
         <p>It doesn't matter where your customers are<br>
            - Getting sand in tight places or standing in line at Starbucks -<br>
