--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -16,7 +16,7 @@
         <div class="image fit">
           <img src="images/pic02.jpg" alt="" />
         </div>
-        <p>Cumsan mollis eros. Pellentesque a diam sit amet mi magna ullamcorper vehicula. Integer adipiscin sem. Nullam quis massa sit amet lorem ipsum feugiat tempus.</p>
+        <p>We're happy you've taken the first step.</p>
       </div>
     </article>
   </div>
